@@ -27,6 +27,7 @@ ChangeLog
     * Don't throw an exception on processing invalid metadata
     * layer_height attribute added to FDM metadata
     * estimated_to_seconds function
+    * Added function for check free space of storage
 
 0.2.0 (2020-12-14)
 
